staging/security_groups/main.tf
/**
 * Creates basic security groups to be used by instances and ELBs.
 */

variable "name" {
  description = "The name of the security groups serves as a prefix, e.g stack"
}

variable "vpc_id" {
  description = "The VPC ID"
}

variable "cidr" {
  description = "The cidr block to use for internal security groups"
}

resource "aws_security_group" "engineering-staging-elb" {
  provider    = "aws.local"
  name        = "staging-elb"
  description = "Public ELB used for Staging"
  vpc_id      = "${var.vpc_id}"

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    cidr_blocks     = ["0.0.0.0/0"]
  }

  ingress {
    from_port       = 443
    to_port         = 443
    protocol        = "tcp"
    cidr_blocks     = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 9990
    protocol = "tcp"
    to_port = 9990
    cidr_blocks     = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  lifecycle {
    create_before_destroy = true
  }

  tags {
    Name        = "Sandboxes ELB"
  }
}

resource "aws_security_group" "engineering-staging" {
  provider    = "aws.local"
  name        = "staging-ecs"
  description = "Staging ECS Cluster"
  vpc_id      = "${var.vpc_id}"

  ingress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    security_groups = ["${aws_security_group.engineering-staging-elb.id}"]
  }

  ingress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    self            = true
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name        = "Sandboxes ECS Cluster"
  }
}

output "engineering_staging" {
  value = "${aws_security_group.engineering-staging.id}"
}

output "engineering_staging_elb" {
  value = "${aws_security_group.engineering-staging-elb.id}"
}
